--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AboutMe</string>
+    <string name="app_name">About Kai</string>
     <string name="name">Kai Doe</string>
     <string name="yellow_star">Yellow star</string>
     <string name="bio">Hi, my name is Kai.
